# demo-ce

./: .gitignore  CMakeLists.txt  README.md  prj.conf  sample.yaml
inc/: demo.h  uart.h  uart_line.h
inputs/: demo.yaml
src/: demo.c  main.c  uart_line.c
